--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,11 +30,12 @@
 
         /* Modules */
         "module": "ESNext",                                  /* Specify what module code is generated. */
-        "rootDir": "src",                                    /* Specify the root folder within your source files. */
+        "rootDir": ".",                                      /* Specify the root folder within your source files. */
         "moduleResolution": "node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
-        "baseUrl": "src",                                    /* Specify the base directory to resolve non-relative module names. */
+        "baseUrl": ".",                                      /* Specify the base directory to resolve non-relative module names. */
         "paths": {                                           /* Specify a set of entries that re-map imports to additional lookup locations. */
-            "@/*": ["*"]
+            "@/*": ["src/*"],
+            "@tests/*": ["tests/*"]
         },
         // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
         // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
@@ -116,7 +117,8 @@
         "verbose": true
     },
     "include": [
-        "src"
+        "src",
+        "tests"
     ],
     "exclude": [
         "dist",
